Revert changes after rebase